# wdleds

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure  configure.ac  configure.in
debian/: changelog  control  copyright  wdcpumeter.1  wddiskmeter.1  wdleds.manpages  wdmemmeter.1
docs/: wdleds.1  wdsetleds.1
essential_scripts/: Makefile.am  wdcpumeter  wddiskmeter  wdmemmeter  wdsetleds
src/: Makefile.am  Makefile.in  wdleds.c  wdleds.h
tags/MyBookProOnly/: AUTHORS  NEWS  README
tags/MyBookProOnly/essential_scripts/: Makefile.am  Makefile.in  wdmemmeter
tags/MyBookProOnly/src/: Makefile.am  wdleds.c
trunk/: Makefile.in  aclocal.m4
