dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(configure.ac)
AM_INIT_AUTOMAKE(wdleds, 0.9)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC











AC_OUTPUT([
Makefile
essential_scripts/Makefile
src/Makefile

])
